--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title></title>
+    <title>श्री अंबिका ग्रामीण बिगरशेती सहकारी पतसंस्था मर्या. खोडद</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -15,6 +15,9 @@
     <link href="css/custom.css" rel="stylesheet">
 
 <style>
+    .active {
+    background-color: #102669;
+}
 #header {
     position: relative;
     height: auto;
@@ -47,10 +50,13 @@ color: #fff;
 .dropdown:hover .dropdown-menu {
   display: block;
 }
+
+
 </style>
 </head>
 
-<body>
+<body style="    color: #ffffff;
+background-color: #abd8fd;padding: 0;">
 
     <!-- Navigation -->
     <div id="header">
@@ -89,7 +95,7 @@ color: #fff;
                         <a href="#">सुविधा</a>
                     </li>
                     <li>
-                        <a href="#">फोटो गॅलरी</a>
+                        <a href="gallery.html">फोटो गॅलरी</a>
                     </li>
                     <li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ठेवी<span class="caret"></span></a>
@@ -238,7 +244,7 @@ color: #fff;
 			</div>
         </div>
         
-        <div class="small-print">
+        <div class="small-print" style="background-color: #000;">
         	<div class="container">
         		<p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
         		<p>Copyright &copy; Example.com 2015 </p>
